[package]
name = "deadpool-tiberius"
version = "0.1.3"
edition = "2021"
authors = ["Geo W"]
description = "Async ms sql server connection pool simple impl of deadpool"
keywords = ["async", "database", "sqlserver", "pool", "tiberius"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Geo-W/deadpool-tiberius"
readme = "README.md"



[dependencies]
thiserror = "1.0.40"
tiberius = { version = "0.12.2"}
deadpool = { version ="0.10.0", features = ["rt_tokio_1"] }
tokio = { version = "1.29.1", features = ["net"] }
tokio-util = { version = "0.7.8", features = ["compat"] }


[features]
sql-browser = ["tiberius/sql-browser-tokio"]
chrono = ["tiberius/chrono"]

[dev-dependencies]
futures-lite = "1.13.0"
tokio = { version = "1.29.1", features = ["full"] }