[package]
name = "deadpool-tiberius"
version = "0.1.5"
edition = "2021"
authors = ["Geo W"]
description = "Async ms sql server connection pool simple impl of deadpool"
keywords = ["async", "database", "sqlserver", "pool", "tiberius"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Geo-W/deadpool-tiberius"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
thiserror = "1.0.49"
tiberius = { version = "0.12.2"}
deadpool = { version ="0.10.0", features = ["rt_tokio_1"] }
tokio = { version = "1.33.0", features = ["net"] }
tokio-util = { version = "0.7.9", features = ["compat"] }


[features]
sql-browser = ["tiberius/sql-browser-tokio"]
chrono = ["tiberius/chrono"]

[dev-dependencies]
futures-lite = "1.13.0"
tokio = { version = "1.33.0", features = ["net", "macros"] }