[package]
name = "deadpool-tiberius"
version = "0.1.8"
edition = "2021"
authors = ["Geo W"]
description = "Async ms sql server connection pool simple impl of deadpool"
keywords = ["async", "database", "sqlserver", "pool", "tiberius"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Geo-W/deadpool-tiberius"
readme = "README.md"
exclude = ["/.idea/"]

[package.metadata.docs.rs]
features = ["all"]
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
thiserror = "2.0"
tiberius = { version = "0.12.2", default-features = false }
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
tokio = { version = "1.41", features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }


[features]
default = ["tiberius/default"]
all = ["tiberius/all"]
sql-browser = ["tiberius/sql-browser-tokio"]
chrono = ["tiberius/chrono"]
time = ["tiberius/time"]
rustls = ["tiberius/rustls"]
tds73 = ["tiberius/tds73"]
winauth = ["tiberius/winauth"]
native-tls = ["tiberius/native-tls"]
opentls = ["tiberius/opentls"]
bigdecimal = ["tiberius/bigdecimal"]
rust_decimal = ["tiberius/rust_decimal"]

[dev-dependencies]
futures-lite = "2.5.0"
tokio = { version = "1.33.0", features = ["net", "macros"] }